--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="memorizer.freecoders.com.flashcards.MemorizerApplication">
+        android:name=".common.MemorizerApplication">
         <activity
             android:name=".FlashCardActivity"
             android:label="@string/app_name"
