--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'com.desarrollodroide:fragmenttransactionextended:1'
     compile 'de.hdodenhof:circleimageview:1.2.1'
-    compile 'com.github.nkzawa:socket.io-client:0.3.0'
+    compile 'io.socket:socket.io-client:0.6.2'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
 }
