--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:name=".CardsetPickerActivity"
             android:label="@string/title_activity_cardset_picker"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
     </application>
 
 </manifest>
