--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "multicards.freecoders.com"
+        applicationId "memorizer.freecoders.com.memo_test"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 2
