--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".common.Multicards"
@@ -47,6 +48,7 @@
             android:label="@string/title_activity_gameover"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
+            android:launchMode= "singleInstance"
             android:configChanges="keyboardHidden|orientation|screenSize"></activity>
 
         <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
