--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:label="@string/title_activity_cardset_picker"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
+            android:launchMode="singleTop"
             android:configChanges="keyboardHidden|orientation|screenSize"></activity>
 
         <activity
