- Added res_extra

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
     }
+
+    sourceSets {
+        main.res.srcDirs = ['src/main/res','src/main/res_extra']
+    }
 }
 
 dependencies {
