- Added ocpsoft-pretty-time

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     compile 'com.soundcloud.android:android-crop:0.9.10@aar'
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile 'jp.wasabeef:recyclerview-animators:2.0.1'
+
+    compile 'com.ocpsoft:ocpsoft-pretty-time:1.0.7'
     compile files('../libs/ActiveAndroid.jar')
 }
 
