--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
-            android:launchMode= "singleTop"
+            android:launchMode= "singleInstance"
             android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,7 +35,7 @@
 
         <meta-data
             android:name="AA_DB_NAME"
-            android:value="Memorizer_v2.db" />
+            android:value="Memorizer_v3.db" />
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
